--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,15 @@ jobs:
     name: Rust project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: "Git checkout"
+        uses: actions/checkout@v2
+
+      - name: "Rust setup"
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
 
-      - uses: actions-rs/cargo@v1
+      - name: "cargo test"
+        uses: actions-rs/cargo@v1
         with:
           command: test
