--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,11 @@ jobs:
         with:
           toolchain: stable
 
-      - name: "Run Clippy"
-      - run: rustup component add clippy
-      - uses: actions-rs/clippy-check@v1
+      - name: "Add Clippy"
+        run: rustup component add clippy
+
+      - name: "Clippy check"
+        uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --all-features
