--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           toolchain: stable
 
+      - name: "Cargo cache"
+        uses: Swatinem/rust-cache@v2
+
       - name: "Add Clippy"
         run: rustup component add clippy
 
